Fix: Rename index1.html to index.html

--- a/blog.html
+++ b/blog.html
@@ -1082,19 +1082,19 @@
             <div class="footer-links">
                 <h4>Services</h4>
                 <ul>
-                    <li><a href="index1.html#services">Web Development</a></li>
-                    <li><a href="index1.html#services">Mobile Apps</a></li>
-                    <li><a href="index1.html#services">Cloud Solutions</a></li>
-                    <li><a href="index1.html#services">AI & ML</a></li>
+                    <li><a href="index.html#services">Web Development</a></li>
+                    <li><a href="index.html#services">Mobile Apps</a></li>
+                    <li><a href="index.html#services">Cloud Solutions</a></li>
+                    <li><a href="index.html#services">AI & ML</a></li>
                 </ul>
             </div>
             <div class="footer-links">
                 <h4>Company</h4>
                 <ul>
-                    <li><a href="index1.html#about">About Us</a></li>
+                    <li><a href="index.html#about">About Us</a></li>
 
                     
-                    <li><a href="index1.html#contact">Contact</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-links">
